# LAG

./: CMakeLists.txt  ParserWithoutTree.txt  README.md  input.txt  main.cpp  notes-and-questions.txt  notes.txt
DFAGenerator/: DFAGenerator.cpp  DFAGenerator.h
FileGenerator/: FileGenerator.cpp  FileGenerator.h
NFA/: NFA.cpp  NFA.h
NFAGenerator/: NFAGenerator.cpp  NFAGenerator.h
NFANode/: NFANode.cpp  NFANode.h
ParseTreeNode/: ParseTreeNode.cpp  ParseTreeNode.h
Parser/: Parser.cpp  Parser.h
RegexNode/: RegexNode.cpp  RegexNode.h
TokenRecognizer/: TokenRecognizer.cpp  TokenRecognizer.h
TokenReturner/: TokenReturner.cpp  TokenReturner.h
token_recognizers/: token_recognizers.cpp  token_recognizers.h
utils/: utils.cpp  utils.h
